data/derived/comb/progs/unify/prog4086.ml.out
Characters 52-65:
  0 -> [] | n -> digitsOfInt n :: [];;
                 ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
